# openlore

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  cli.sh  deny.toml  proptest.toml  run.sh  rust-toolchain.toml
.cargo/: config.toml
.dual-graph/: info_graph.json  prime.sh  stop.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  formula-smoke.yml  nightly.yml  release.yml
Formula/: openlore.rb  openlore.rb.tmpl
crates/adapter-atproto-did/: Cargo.toml
crates/adapter-atproto-did/src/: lib.rs  peer_resolve.rs  probe.rs
crates/adapter-atproto-ingest/: Cargo.toml
crates/adapter-atproto-ingest/src/: lib.rs
crates/adapter-atproto-pds/: Cargo.toml
crates/adapter-atproto-pds/src/: lib.rs  peer_read.rs  probe.rs
crates/adapter-duckdb/: Cargo.toml
crates/adapter-duckdb/src/: graph_query.rs  lib.rs  peer_storage.rs  probe.rs  schema.rs  schema_v3.rs  schema_v4.rs  store_read.rs
crates/adapter-duckdb/tests/: integration.rs
crates/adapter-github/: Cargo.toml
crates/adapter-github/src/: client.rs  lib.rs  probe.rs
crates/adapter-http-viewer/: Cargo.toml
crates/adapter-http-viewer/src/: lib.rs  probe.rs
crates/adapter-index-query/: Cargo.toml
crates/adapter-index-query/src/: lib.rs
crates/adapter-index-store/: Cargo.toml
crates/adapter-index-store/src/: lib.rs  schema.rs
crates/adapter-system-clock/: Cargo.toml
crates/adapter-system-clock/src/: lib.rs
crates/adapter-xrpc-query-server/: Cargo.toml
crates/adapter-xrpc-query-server/src/: lib.rs
crates/appview-domain/: Cargo.toml
crates/appview-domain/src/: compose.rs  ingest.rs  lib.rs  proptest_strategies.rs  retraction.rs  suggest.rs
crates/claim-domain/: Cargo.toml
crates/claim-domain/src/: canonicalize.rs  cid.rs  confidence.rs  decode.rs  lib.rs  normalize.rs  proptest_strategies.rs  references.rs  sign.rs  validate_counter_claim.rs  verify.rs
crates/cli/: Cargo.toml
crates/cli/proptest-regressions/: render.txt
crates/cli/src/: errors.rs  io.rs  lib.rs  main.rs  orientation.rs  paths.rs  render.rs  wiring.rs
crates/cli/src/render/: claim.rs  common.rs  contributor.rs  counter.rs  federated.rs  graph.rs  object_query.rs  philosophy.rs  score.rs  scrape.rs  search.rs  tests.rs  traversal.rs
crates/cli/src/verbs/: claim_add.rs  claim_counter.rs  claim_publish.rs  claim_retract.rs  graph_query.rs  init.rs  mod.rs  peer_add.rs  peer_pull.rs  peer_remove.rs  philosophy_add.rs  philosophy_list.rs  philosophy_show.rs  scrape_github.rs  search.rs  ui.rs
crates/lexicon/: Cargo.toml
crates/lexicon/proptest-regressions/: philosophy.txt
crates/lexicon/src/: appview_query.rs  claim.rs  lib.rs  philosophy.rs  probe.rs  seeds.json  serde_impls.rs
crates/openlore-indexer/: Cargo.toml
crates/openlore-indexer/src/: main.rs  probe_gauntlet.rs  run.rs
crates/ports/: Cargo.toml
crates/scoring/: Cargo.toml
crates/scoring/src/: config.rs  explain.rs  lib.rs  score.rs
crates/scraper-domain/: Cargo.toml
crates/scraper-domain/proptest-regressions/: detect.txt
crates/scraper-domain/src/: derive.rs  detect.rs  lib.rs  mapping.rs  proptest_strategies.rs  signal_predicate_mapping.yaml
crates/test-support/: Cargo.toml
crates/test-support/src/: fake_github.rs  fake_ingest_source.rs  fake_pds.rs  fake_peer_pds.rs  fixtures.rs  fixtures_github.rs  fixtures_ingest.rs  fixtures_peer.rs  fixtures_scoring.rs  identity.rs  lib.rs
crates/viewer-domain/: Cargo.toml
crates/viewer-domain/src/: claims.rs  common.rs  detail.rs  landing.rs  lib.rs  peer_claims.rs  peers.rs  philosophies.rs  score.rs  scrape.rs  search.rs  tests.rs  traversal.rs
docs/: build-optimization.md
docs/adrs/: ADR-001-local-storage-duckdb.md  ADR-002-identity-atproto-did-derived-key.md  ADR-003-cli-verb-contract.md  ADR-004-async-runtime-tokio.md  ADR-005-lexicon-namespace.md  ADR-006-claim-addressing-cid.md  ADR-007-paradigm-functional-rust.md  ADR-008-retraction-counter-claim-no-hard-delete.md  ADR-009-architecture-style-hexagonal-modular-monolith.md  ADR-010-telemetry-opt-in-policy.md  ADR-011-release-matrix-and-channels.md  ADR-012-supply-chain-policy.md  ADR-013-verb-contract-amendment-federated-read.md  ADR-014-peer-storage-schema-anti-merging-invariant.md  ADR-015-counter-claim-lexicon-extension-reason-field.md  ADR-016-pull-on-demand-semantics.md  ADR-017-verb-contract-amendment-github-scraper.md  ADR-018-candidate-claim-model-signal-predicate-mapping.md  ADR-019-github-adapter-rate-limit-pat-policy.md  ADR-020-graph-query-verb-amendment-explorer-flags.md  ADR-021-duckdb-recursive-cte-graph-traversal.md  ADR-022-pure-scoring-core-anti-merging-in-aggregates.md  ADR-023-appview-indexer-self-hostable-single-binary.md  ADR-024-pull-based-bounded-network-ingestion.md  ADR-025-network-index-duckdb-schema-anti-merging.md  ADR-026-production-plc-pubkey-decode.md  ADR-027-search-verb-cli-indexer-transport-graceful-degradation.md  ADR-028-htmx-viewer-architecture.md  ADR-029-maud-templating-pure-core.md  ADR-030-read-only-store-read-port.md  ADR-031-htmx-asset-vendored-static-route.md  ADR-032-fragment-page-rendering-split.md  ADR-033-hx-request-dispatch-in-effect-shell.md  ADR-034-tab-switch-hx-push-url-history.md  ADR-035-acceptance-harness-hx-request-seam.md  ADR-036-viewer-index-query-port-capability-boundary.md  ADR-037-search-state-adt-viewer-domain-projection-degradation.md  ADR-038-search-route-get-form-nav-config-reuse.md  ADR-039-viewer-local-contributor-scoring-read-seam-pure-scorer-reuse.md  ADR-040-score-state-adt-viewer-domain-projection-transparent-breakdown.md  (+22 more)
docs/architecture/: atdd-infrastructure-policy.md  feature-evolution-map.md
docs/evolution/: claim-compose-advisory-slice-25-evolution.md  htmx-scraper-viewer-evolution.md  openlore-appview-search-evolution.md  openlore-federated-read-evolution.md  (+32 more)
scripts/: check-probes.sh
xtask/: Cargo.toml
xtask/src/: check_arch.rs  check_probes.rs  lib.rs  main.rs
xtask/tests/: anti_merging.rs  anti_merging_index_store.rs  autoconfirm_guard.rs  capability_boundary.rs  pubkey_seam.rs  viewer_fail_seam.rs
(+540 files in other folders)
