# OpenLore — workspace manifest
#
# Hexagonal + Modular Monolith (ADR-009): one workspace, many crates.
# Pure core (claim-domain, lexicon, ports) is paranoid about I/O deps;
# the effect shell (adapter-*) wraps real systems; cli is the single
# composition root.
#
# RED-baseline scaffold (step 01-01): every crate exposes panic-stubs;
# DELIVER fills bodies one scenario at a time. See
# docs/feature/openlore-foundation/design/component-boundaries.md.

[workspace]
resolver = "2"
members = [
    "crates/claim-domain",
    "crates/lexicon",
    "crates/ports",
    "crates/scoring",
    "crates/scraper-domain",
    "crates/appview-domain",
    # slice-06 (htmx viewer) — the PURE read-only view-model + HTML core (ADR-029).
    "crates/viewer-domain",
    "crates/adapter-duckdb",
    "crates/adapter-atproto-did",
    "crates/adapter-atproto-pds",
    "crates/adapter-github",
    "crates/adapter-system-clock",
    # slice-05 (appview search) indexer effect adapters — step 01-03 scaffolds.
    "crates/adapter-atproto-ingest",
    "crates/adapter-index-store",
    "crates/adapter-xrpc-query-server",
    "crates/adapter-index-query",
    # slice-06 (htmx viewer) — the hyper EFFECT shell for `openlore ui`
    # (ADR-028/030); linked ONLY by cli (xtask capability invariant).
    "crates/adapter-http-viewer",
    # slice-05 (appview search) the SECOND composition root — step 01-04.
    "crates/openlore-indexer",
    "crates/cli",
    "crates/test-support",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeffbailey/openlore"
authors = ["OpenLore contributors"]

# Shared dependencies pinned at the workspace root. Crates opt-in via
# `dep = { workspace = true }`. Adapter-specific heavies (duckdb,
# atrium-api, ring, keyring) get pinned later in their own steps to
# avoid pulling them into the pure-core compile graph prematurely.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt", "io-util", "time"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
cid = "0.11"
multihash = "0.19"
tempfile = "3"
assert_cmd = "2"
proptest = "1"
# Pure URL parser — no I/O. Used by slice-03 `PeerInfo.pds_endpoint`
# + `PeerSubscription.peer_pds_endpoint` + `PdsPort::list_peer_records`.
url = { version = "2", features = ["serde"] }
# Pure compile-time HTML template macro (no I/O, no async runtime). Slice-06
# (ADR-029): the read-only `openlore ui` viewer's server-rendered HTML. Used by
# the PURE `viewer-domain` core; allowlisted in the `xtask check-arch` pure-core
# arm (mirrors `serde_yaml_ng` for `scraper-domain`).
maud = "0.27"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Dev-build speed (build-optimization pass).
#
# The default dev profile emits FULL DWARF (`debug = 2`) for every crate. That
# debug info is the single biggest per-edit codegen + link cost, and it is paid
# on the `openlore` binary AND each of the 63 `cli` integration-test binaries
# (each statically links duckdb/tokio/atrium). `line-tables-only` keeps the
# file:line in panic messages and backtraces — all the TDD loop needs — at a
# fraction of the DWARF size, so both codegen and link shrink on every edit.
#
# CRUCIAL: this override is scoped to WORKSPACE MEMBERS only. Dependencies are
# pinned at `debug = 2` via the `package."*"` block below (which, per Cargo,
# matches all dependencies but no workspace member). Without that pin, lowering
# `[profile.dev].debug` would also invalidate every dependency and force a
# one-time rebuild of the (very expensive) duckdb C++ — so the pin keeps the
# heavy dep artifacts untouched; only the crates you actually edit recompile.
[profile.dev]
debug = "line-tables-only"

# Keep dependencies exactly at the current default so this change does NOT
# trigger a duckdb / tokio / atrium rebuild. (`"*"` = all deps, not workspace.)
[profile.dev.package."*"]
debug = 2
