[package]
name = "xtask"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore architecture-verification tasks: `cargo xtask check-arch | check-probes`."

[[bin]]
name = "xtask"
path = "src/main.rs"

# Architecture-verification only; intentionally NOT depending on workspace
# crates so it can run before they compile.
#
# Step 06-05: `cargo_metadata` reads the workspace dep graph for
# check-arch. `anyhow` keeps the binary's error-rendering ergonomic.
# Step 06-06: `syn` AST-parses adapter source to detect stub `probe()`
# bodies; `walkdir` enumerates `crates/adapter-*/src/**/*.rs`. Both are
# pure-Rust, no transitive I/O — safe to add to xtask's tight dep graph.
[dependencies]
cargo_metadata = "0.23"
anyhow = { workspace = true }
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"] }
walkdir = "2"

[dev-dependencies]
# step 06-05 inner-TDD: hand-constructed in-memory dep graphs feed the
# pure `check_workspace` function.
# step 06-06 inner-TDD: in-memory Rust source snippets feed the pure
# `classify_probe_body` function. No external test deps needed.
# step 01-03 (slice-05): the index-store anti-merging integration test
# (`tests/anti_merging_index_store.rs`) generates adversarial aggregating SQL
# strings with proptest and asserts the pure
# `classify_index_store_sql_literal` rule fires; the SAFE attributed read
# class passes. `proptest` is pure-Rust (no transitive I/O) — safe in xtask's
# tight dep graph, and a dev-dependency only.
proptest = { workspace = true }
# ADR-026 (pubkey-seam release-gating): the broadened-scope integration test
# (`tests/pubkey_seam.rs`) lays down a temp workspace-root with fixture
# `adapter-atproto-did/src/*.rs` files and drives the EFFECT-shell scan against
# it, proving `peer_resolve.rs` is in the scan scope. Pure-Rust, dev-only.
tempfile = { workspace = true }
