[package]
name = "adapter-duckdb"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore StoragePort adapter: embedded DuckDB + claims/<cid>.json files."

[lib]
path = "src/lib.rs"

# EFFECT shell. Step 04-05 wires real duckdb. The duckdb crate bundles
# its C library via the `bundled` feature so we don't depend on a
# system-installed DuckDB (CI reproducibility).
[dependencies]
ports = { path = "../ports" }
claim-domain = { path = "../claim-domain" }
lexicon = { path = "../lexicon" }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
# `url` is a pure parser (no I/O); needed to name `Url` in the
# `PeerStoragePort::write_peer_claim` signature (slice-03, step 01-02).
url = { workspace = true }
duckdb = { version = "1.3", features = ["bundled", "chrono"] }

[dev-dependencies]
tempfile = { workspace = true }
