[package]
name = "adapter-http-viewer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore `openlore ui` viewer HTTP shell: hand-rolled hyper 1.x server over a READ-ONLY StoreReadPort, serves server-rendered HTML (ADR-028/030). Binds 127.0.0.1 only; holds no write/sign surface."

[lib]
path = "src/lib.rs"

# EFFECT shell (slice-06; ADR-028/030). The read-only `openlore ui` viewer's
# HTTP surface: a hand-rolled minimal hyper 1.x server (mirrors
# `adapter-xrpc-query-server`) that binds 127.0.0.1 ONLY, reads a
# `Box<dyn StoreReadPort>` (NO write/sign method on that port — I-VIEW-1), calls
# the PURE `viewer-domain::render_claims_page`, and returns 200 text/html.
#
# CAPABILITY BOUNDARY (xtask check-arch): this crate MUST NOT depend on any
# signing/identity/pds crate (adapter-atproto-did/-pds). It holds ONLY a
# read-only store port. `cli` is the ONLY crate that links it.
#
# Depends on `ports` (StoreReadPort — the read side it serves), `viewer-domain`
# (the pure render core), and the hyper stack (already a TRANSITIVE dep of
# reqwest; NOT deny.toml-banned, unlike axum) reusing the same versions as
# `adapter-xrpc-query-server`. The cli composition root owns the tokio runtime.
[dependencies]
ports = { path = "../ports" }
viewer-domain = { path = "../viewer-domain" }
# `scraper-domain` is the PURE slice-02 candidate-derivation core (NOT an
# adapter — no `adapter-` prefix, so the no-adapter-depends-on-adapter rule is
# untouched). The `/scrape` route runs `derive_candidates` over the harvested
# signals. The `GithubPort` trait itself lives in `ports` (already a dep) — the
# CONCRETE `adapter-github` is wired by the cli composition root and passed in as
# `Box<dyn GithubPort>`, so this crate never links another adapter (I-3) and
# never reaches the signing/PDS surface (I-VIEW-3).
scraper-domain = { path = "../scraper-domain" }
# `appview-domain` is the PURE slice-05 anti-merging search core (NOT an adapter).
# The `/search` route (slice-08; ADR-037) calls the REUSED `compose_results` to
# group the flat attributed rows the read-only `IndexQueryPort` returns into the
# per-author `NetworkSearchResult` the pure `viewer-domain` renderer projects — no
# second grouping/verification path lives in the viewer. The `IndexQueryPort` trait
# itself lives in `ports` (already a dep); the CONCRETE `adapter-index-query` is
# wired by the cli composition root and passed in as `Arc<dyn IndexQueryPort>`, so
# this crate never links another adapter (I-3) and reaches no signing/PDS surface
# (I-NS-1 / I-VIEW-3 — a read-only index query holds no signing key).
appview-domain = { path = "../appview-domain" }
# `scoring` is the PURE slice-04 closed-form adherence-weight core (NOT an adapter).
# The `/score` route (slice-09; ADR-039/040/041) runs the REUSED
# `scoring::score(&feed, &ScoringConfig::DEFAULT)` over the LOCAL attributed feed the
# read-only `StoreReadPort::query_contributor_scoring_feed` returns, in the effect
# shell, then renders the ranked `WeightedView` via the pure `viewer-domain`
# `render_score_*` projection. The weight is computed in Rust (the pure core), NEVER
# in SQL. The handler holds NO signing key (the score is a read + pure compute —
# I-CS-1 / WD-CS-3); `scoring` is a pure core (no I/O), so the capability surface is
# unchanged (xtask check-arch untouched).
scoring = { path = "../scoring" }
# `claim-domain` provides the `Cid`/`Did`/`KeyId` value types the raw transport
# rows carry; the handler maps `NetworkResultRowRaw -> IndexedClaim` before
# composing, and lifts the `?contributor=` query into a `Did` for the scoring feed.
# Pure value types — no I/O edge.
claim-domain = { path = "../claim-domain" }
thiserror = { workspace = true }
serde_json = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { workspace = true, features = ["rt", "net", "macros"] }

# TEST-ONLY: `sha2` pins the vendored htmx asset's SHA-256 in the integrity unit
# test (slice-07; ADR-031) so the embedded bytes cannot silently drift. A
# dev-dependency only — the production viewer takes NO hashing edge (capability
# surface unchanged; xtask check-arch untouched). Pinned crate-locally at the same
# `0.10` line `claim-domain` uses (no workspace `sha2` entry exists).
[dev-dependencies]
sha2 = "0.10"
