[package]
name = "appview-domain"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore pure appview/indexer domain: the verify-before-index gate (ingest_decision) + the anti-merging search composition (compose_results) + near-match suggestion. NO I/O (WD-103/WD-104, ADR-026)."

[lib]
path = "src/lib.rs"

# PURE (slice-05): the symmetric counterpart to slice-02 `scraper-domain` +
# slice-04 `scoring`. Holds the ingest-gate decision (verify-before-index) and
# the anti-merging search/grouping/result-shaping logic. NO I/O, NO persistence,
# NO knowledge of DuckDB/HTTP/the network.
#
# Depends ONLY on the pure value types: `Did`/`Cid`/`VerificationKey`/`KeyId`
# from `claim-domain`, and `chrono` (pure time types). `ingest_decision` reuses
# `claim_domain::verify` + `compute_cid` (the SAME pure core — NO second
# verification path, WD-104).
#
# Forbidden (I-1/I-2; enforced by `cargo xtask check-arch` pure-core allowlist):
# tokio, reqwest, duckdb, keyring, atrium-*, std::fs, std::net,
# std::time::SystemTime, any adapter-* crate.
#
# `proptest` is a REGULAR dependency (not dev-only) so the `proptest_strategies`
# module can expose `pub fn arbitrary_raw_records()` to the layer-2 acceptance
# test (`tests/acceptance/appview_core.rs`, a `[[test]]` in `cli`, which already
# depends on `appview-domain`) via the pure-core import path. This mirrors
# slice-01's `claim-domain::proptest_strategies` exactly (proptest is the
# canonical Rust PBT crate per the nw-distill polyglot matrix). proptest is a
# pure-CPU crate — NOT on the `xtask check-arch` banned-I/O list — so the pure
# core stays pure (WD-103/WD-104; check-arch still passes). `ed25519-dalek` +
# `serde_json` are likewise pure (already regular deps of `claim-domain`),
# needed by the self-contained generator's deterministic test-keypair signing.
[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
claim-domain = { path = "../claim-domain" }
ports = { path = "../ports" }
proptest = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { version = "2", default-features = false }
